# pcg-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  foo.cpp  random_uniform.cpp
ext/pcg-cpp/: CMakeLists.txt
include/: rando.h
include/rando/: macros.h  pcg_extras.h  pcg_random.h  pcg_uint128.h
test/: CMakeLists.txt  first_1k_equal.cpp  pcg32.cpp  unique_not_equal.cpp
